# PyGeneratePrevisibines

./: .gitignore  CLAUDE.md  GEMINI.md  GUI_IMPLEMENTATION_CHECKLIST.md  GeneratePrevisibines.bat  PyGeneratePrevisibines.py  README.md  implementation_analysis_report.md  previs-builder-checklist.md  previs_builder.py  previs_gui.py  pyproject.toml  test-coverage-expansion-checklist.md  test_duplication_report.md  test_foundation.py  test_suite_audit_report.md
.cursor/rules/: python-development-standards.mdc
.github/: copilot-instructions.md
PrevisLib/: __init__.py
PrevisLib/config/: registry.py  settings.py
PrevisLib/core/: __init__.py  build_steps.py  builder.py
PrevisLib/gui/: __init__.py  build_thread.py  main_window.py  settings_dialog.py
PrevisLib/gui/styles/: __init__.py  dark_theme.py
PrevisLib/gui/widgets/: __init__.py  build_controls.py  plugin_input.py  progress_display.py
PrevisLib/models/: data_classes.py
PrevisLib/tools/: __init__.py  archive.py  ckpe.py  creation_kit.py  xedit.py
PrevisLib/utils/: __init__.py  file_system.py  logging.py  process.py  validation.py
docs/: gui_implementation_plan.md  test-coverage-expansion-checklist.md
gui/: __init__.py  main_window.py
gui/styles/: __init__.py  dark_theme.py
gui/widgets/: __init__.py  build_controls.py  plugin_input.py  progress_display.py
tests/: __init__.py  conftest.py  test_bsarch_cli_enhancement.py  test_build_steps.py  test_builder.py  test_builder_edge_cases.py  test_builder_missing_coverage.py  test_cli.py  test_cli_error_handling.py  test_cli_missing_coverage.py  test_cli_prompts.py  test_config.py  test_data_classes.py  test_file_operations.py  test_file_system.py  test_file_system_extended.py  test_final_coverage.py  test_main_cli.py  test_process.py  test_settings_validation.py  test_tools.py  test_utils.py  test_validation.py
tests/gui/: test_build_thread.py
tests/test_gui/: __init__.py  test_main_window.py  test_settings_dialog.py
tests/test_gui/test_styles/: __init__.py  test_dark_theme.py
tests/test_gui/test_widgets/: __init__.py  test_build_controls.py  test_plugin_input.py  test_progress_display.py
